--- a/client/views/panels.html
+++ b/client/views/panels.html
@@ -7,3 +7,10 @@
 	<br />
 {{/if}}
 </template>
+
+
+<template name="markerPlace_robots">
+{{#if isRobot}}
+	<b class="badge badge-robots">{{name}}</b>
+{{/if}}
+</template>
